--- a/TaskPage.xaml
+++ b/TaskPage.xaml
@@ -15,7 +15,17 @@
                 <TextBlock x:Name="ErrorMessage" Text="Task name can't be empty" Opacity="0" Visibility="Visible" FontSize="10" IsColorFontEnabled="True" Foreground="Red"/>
             </StackPanel>
             <StackPanel>
-                <RichEditBox x:Name="TaskDescriptionTextBox" Header="Task Description" TextChanged="TaskDescriptionTextBox_TextChanged" PlaceholderText="Enter task description" Height="100" MaxHeight="100" />
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+                    <RichEditBox x:Name="TaskDescriptionTextBox" Header="Task Description" TextChanged="TaskDescriptionTextBox_TextChanged" PlaceholderText="Enter task description" Height="100" MaxHeight="100" Grid.Column="0"/>
+                    <Button x:Name="LoadFileButton" Background="Transparent" Click="LoadFileButton_Click" Grid.Column="1">
+                        <FontIcon Glyph="&#xE8E5;"/>
+                    </Button>
+                </Grid>
+
                 <TextBlock x:Name="ErrorMessageDescription" Opacity="0" Text="Description can't be empty" Visibility="Visible" FontSize="10" IsColorFontEnabled="True" Foreground="Red"/>
             </StackPanel>
 
@@ -39,16 +49,13 @@
                     </ComboBox>
 
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Spacing="10">
-                        <Button x:Name="SaveTask" Background="Transparent" BorderThickness="0" Click="SaveTask_Click_1">
+                        <Button x:Name="SaveTask" Background="Transparent" BorderThickness="0" Click="SaveTask_Click_1" Height="48" Width="48">
                             <FontIcon Glyph="&#xE74E;" />
                         </Button>
-                        <Button x:Name="CancelButton" BorderThickness="0" Click="CancelButton_Click" Background="Transparent">
+                        <Button x:Name="CancelButton" BorderThickness="0" Click="CancelButton_Click" Background="Transparent" Height="48" Width="48">
                             <FontIcon Glyph="&#xE711;" />
                         </Button>
-                        <Button x:Name="DeleteTask" Background="Transparent" BorderThickness="0" Click="DeleteTask_Click">
-                            <Button.Resources>
-                                <Color x:Key="ButtonBackroundPointedOver">Red</Color>
-                            </Button.Resources>
+                        <Button x:Name="DeleteTask" Background="Red" BorderThickness="0" Click="DeleteTask_Click" PointerEntered="DeleteTask_PointerEntered" Height="48" Width="48">
                             <FontIcon Glyph="&#xE74D;" />
                         </Button>
                         
