--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <Page
+<Page
         x:Class="ToDoPc.MainPage"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -9,57 +9,60 @@
         mc:Ignorable="d"
         Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-        <Grid>
-            <Grid x:Name="TitleBar" Background="Transparent" Height="40">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="Auto"/>
-                </Grid.ColumnDefinitions>
-            </Grid>
+    <Grid>
+        <Grid x:Name="TitleBar" Background="Transparent" Height="40">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+        </Grid>
 
         <Grid>
             <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="Auto"/>
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height ="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="*"/>
-                        <RowDefinition Height="Auto"/>
-                    </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height ="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
 
-                <AutoSuggestBox x:Name="AutoSuggestBox1" PlaceholderText="Type key word here"
+                <StackPanel>
+                    <AutoSuggestBox x:Name="AutoSuggestBox1" PlaceholderText="Type key word here"
                                     TextChanged="AutoSuggestBox_TextChanged"
                                     QueryIcon="Find"
                                     SuggestionChosen="AutoSuggestBox_SuggestionChosen"
                                     AutomationProperties.Name="Basic AutoSuggestBox" Margin="10"/>
+                    <TextBlock x:Name="NoTasksFoundTextBlock" Text="No tasks found" Visibility="Collapsed" Margin="10"/>
+
+                </StackPanel>
 
                 <Button x:Name="AddButton" Background="Transparent" Grid.Row="3" Grid.Column="1" Click="Button_Click" Margin="0, 0 ,20, 20" CornerRadius="90" Height="48" Width="48" BorderThickness="0">
-                        <FontIcon Glyph="&#xE710;"/>
-                    </Button>
-
-                    <ListView x:Name="TaskListView" Grid.Row="1" Grid.RowSpan="2" Grid.ColumnSpan="2">
-                        <ListView.ItemTemplate>
-                            <DataTemplate x:DataType="local:TaskItem">
-                                <Grid x:Name="ItemHolder" Margin="5">
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="Auto"/>
-                                        <ColumnDefinition Width="*"/>
-                                        <ColumnDefinition Width="Auto"/>
-                                    </Grid.ColumnDefinitions>
-                                    <CheckBox IsChecked="{Binding IsCompleted}" Checked="CheckBox_Checked" Unchecked="CheckBox_Unchecked" Margin="0" Grid.Column="0"/>
-                                    <TextBlock Text="{Binding Task}" Margin="5,0,0,0" VerticalAlignment="Center" Grid.Column="1" />
-                                    <Button x:Name="EditTask" Click="EditTask_Click" Background="Transparent" BorderThickness="0" HorizontalAlignment="Right" Grid.Column="2" ToolTipService.ToolTip="Edit" DataContext="{Binding}">
-                                        <FontIcon Glyph="&#xE70F;"/>
-                                    </Button>
-                                </Grid>
-                            </DataTemplate>
-                        </ListView.ItemTemplate>
-                    </ListView>
-                </Grid>
+                    <FontIcon Glyph="&#xE710;"/>
+                </Button>
+                <ListView x:Name="TaskListView" Grid.Row="1" Grid.RowSpan="2" Grid.ColumnSpan="2">
+                    <ListView.ItemTemplate>
+                        <DataTemplate x:DataType="local:TaskItem">
+                            <Grid x:Name="ItemHolder" Margin="5">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto"/>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="Auto"/>
+                                </Grid.ColumnDefinitions>
+                                <CheckBox IsChecked="{Binding IsCompleted}" Checked="CheckBox_Checked" Unchecked="CheckBox_Unchecked" Margin="0" Grid.Column="0"/>
+                                <TextBlock Text="{Binding Task}" Margin="5,0,0,0" VerticalAlignment="Center" Grid.Column="1" />
+                                <Button x:Name="EditTask" Click="EditTask_Click" Background="Transparent" BorderThickness="0" HorizontalAlignment="Right" Grid.Column="2" ToolTipService.ToolTip="Edit" DataContext="{Binding}">
+                                    <FontIcon Glyph="&#xE70F;"/>
+                                </Button>
+                            </Grid>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
             </Grid>
         </Grid>
-    </Page>
+    </Grid>
+</Page>
