--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -1,68 +1,87 @@
-<?xml version="1.0" encoding="utf-8"?>
 <Page
-        x:Class="ToDoPc.MainPage"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:local="using:ToDoPc"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d"
-        Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    x:Class="ToDoPc.MainPage"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="using:ToDoPc"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    mc:Ignorable="d"
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid>
-        <Grid x:Name="TitleBar" Background="Transparent" Height="40">
+
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="200"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <!-- NavigationView -->
+        <NavigationView x:Name="nvSample9" Width="Auto" IsPaneOpen="True"
+                        PaneDisplayMode="Left" IsPaneToggleButtonVisible="False" 
+                        Grid.Column="0" Grid.Row="0" Grid.RowSpan="2"
+                        IsSettingsVisible="True" VerticalAlignment="Stretch">
+            <NavigationView.MenuItems>
+                <NavigationViewItem Content="Browse" Tag="SamplePage1" Icon="Library" />
+                <NavigationViewItem Content="Track an Order" Tag="SamplePage2" Icon="Map" />
+                <NavigationViewItem Content="Order History" Tag="SamplePage3" Icon="Tag" />
+            </NavigationView.MenuItems>
+            <NavigationView.FooterMenuItems>
+                <NavigationViewItem Content="Account" Tag="SamplePage4" Icon="Contact" />
+                <NavigationViewItem Content="Help" Tag="SamplePage5" Icon="Help" />
+            </NavigationView.FooterMenuItems>
+            <Frame x:Name="contentFrame9" />
+        </NavigationView>
+
+        <!-- Główna treść (zawartość w Grid.Column="1") -->
+        <Grid Grid.Column="1" Grid.Row="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
-        </Grid>
 
-        <Grid>
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="Auto"/>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height ="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="Auto"/>
-                </Grid.RowDefinitions>
+            <!-- AutoSuggestBox i tekst "No tasks found" -->
+            <StackPanel Grid.Row="0" Grid.ColumnSpan="2" Margin="20">
+                <AutoSuggestBox x:Name="AutoSuggestBox1" PlaceholderText="Type key word here"
+                                TextChanged="AutoSuggestBox_TextChanged"
+                                QueryIcon="Find"
+                                SuggestionChosen="AutoSuggestBox_SuggestionChosen"
+                                AutomationProperties.Name="Basic AutoSuggestBox" />
+                <TextBlock x:Name="NoTasksFoundTextBlock" Text="No tasks found" Visibility="Collapsed" Margin="10"/>
+            </StackPanel>
 
-                <StackPanel>
-                    <AutoSuggestBox x:Name="AutoSuggestBox1" PlaceholderText="Type key word here"
-                                    TextChanged="AutoSuggestBox_TextChanged"
-                                    QueryIcon="Find"
-                                    SuggestionChosen="AutoSuggestBox_SuggestionChosen"
-                                    AutomationProperties.Name="Basic AutoSuggestBox" Margin="10"/>
-                    <TextBlock x:Name="NoTasksFoundTextBlock" Text="No tasks found" Visibility="Collapsed" Margin="10"/>
+            <!-- Lista zadań (ListView) -->
+            <ListView x:Name="TaskListView" Grid.Row="1" Grid.RowSpan="2" Grid.ColumnSpan="2">
+                <ListView.ItemTemplate>
+                    <DataTemplate x:DataType="local:TaskItem">
+                        <Grid x:Name="ItemHolder" Margin="5">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="32"/>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="Auto"/>
+                            </Grid.ColumnDefinitions>
+                            <CheckBox IsChecked="{Binding IsCompleted}" Checked="CheckBox_Checked" Unchecked="CheckBox_Unchecked" Margin="0" Grid.Column="0"/>
+                            <TextBlock Text="{Binding Task}" TextAlignment="Left" Margin="5,0,0,0" VerticalAlignment="Center" Grid.Column="1" />
+                            <Button x:Name="EditTask" Click="EditTask_Click" Background="Transparent" BorderThickness="0" HorizontalAlignment="Right" Grid.Column="2" ToolTipService.ToolTip="Edit" DataContext="{Binding}">
+                                <FontIcon Glyph="&#xE70F;"/>
+                            </Button>
+                        </Grid>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
 
-                </StackPanel>
-
-                <Button x:Name="AddButton" Background="Transparent" Grid.Row="3" Grid.Column="1" Click="Button_Click" Margin="0, 0 ,20, 20" CornerRadius="90" Height="48" Width="48" BorderThickness="0">
-                    <FontIcon Glyph="&#xE710;"/>
-                </Button>
-                <ListView x:Name="TaskListView" Grid.Row="1" Grid.RowSpan="2" Grid.ColumnSpan="2">
-                    <ListView.ItemTemplate>
-                        <DataTemplate x:DataType="local:TaskItem">
-                            <Grid x:Name="ItemHolder" Margin="5">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="Auto"/>
-                                    <ColumnDefinition Width="*"/>
-                                    <ColumnDefinition Width="Auto"/>
-                                </Grid.ColumnDefinitions>
-                                <CheckBox IsChecked="{Binding IsCompleted}" Checked="CheckBox_Checked" Unchecked="CheckBox_Unchecked" Margin="0" Grid.Column="0"/>
-                                <TextBlock Text="{Binding Task}" Margin="5,0,0,0" VerticalAlignment="Center" Grid.Column="1" />
-                                <Button x:Name="EditTask" Click="EditTask_Click" Background="Transparent" BorderThickness="0" HorizontalAlignment="Right" Grid.Column="2" ToolTipService.ToolTip="Edit" DataContext="{Binding}">
-                                    <FontIcon Glyph="&#xE70F;"/>
-                                </Button>
-                            </Grid>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
-            </Grid>
+            <!-- Przycisk dodawania -->
+            <Button x:Name="AddButton" Background="Transparent" Grid.Row="2" Grid.Column="1" Click="Button_Click" Margin="0, 20, 20, 20" CornerRadius="90" Height="48" Width="48" BorderThickness="0">
+                <FontIcon Glyph="&#xE710;"/>
+            </Button>
         </Grid>
     </Grid>
 </Page>
